--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "Fullstack accounts for Apollo: server side",
   "main": "dist/index.js",
   "scripts": {
-    "build": "babel index.js --out-dir dist --presets env",
+    "build": "babel index.js --out-dir dist",
     "prepublishOnly": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -20,7 +20,8 @@
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
-    "babel-preset-env": "^1.7.0"
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-stage-3": "^6.24.1"
   },
   "dependencies": {
     "@accounts/database-manager": "^0.3.0-beta.21",
@@ -29,6 +30,7 @@
     "@accounts/password": "^0.3.0-beta.21",
     "@accounts/server": "^0.3.0-beta.21",
     "graphql": "^0.13.2",
-    "graphql-tools": "^3.0.5"
+    "graphql-tools": "^3.0.5",
+    "lodash": "^4.17.10"
   }
 }
