--- a/demo/server/package.json
+++ b/demo/server/package.json
@@ -1,7 +1,6 @@
 {
   "name": "apollo-accounts-demo-server",
   "private": true,
-  "version": "1.0.0",
   "main": "server.js",
   "license": "MIT",
   "scripts": {
@@ -9,21 +8,21 @@
     "start-mongo": "docker-compose up -d"
   },
   "dependencies": {
-    "@accounts/database-manager": "0.3.0-beta.20",
-    "@accounts/graphql-api": "0.3.0-beta.20",
-    "@accounts/mongo": "0.3.0-beta.20",
-    "@accounts/password": "0.3.0-beta.20",
-    "@accounts/rest-express": "0.3.0-beta.20",
-    "@accounts/server": "0.3.0-beta.20",
-    "apollo-accounts-password-server": "^0.1.0",
-    "apollo-server": "2.0.0-rc.5",
-    "cors": "2.8.4",
-    "express": "4.16.3",
-    "graphql": "0.13.2",
-    "graphql-tools": "3.0.5",
-    "lodash": "4.17.10",
-    "mongodb": "^3.1.1",
-    "mongoose": "5.2.2"
+    "@accounts/database-manager": "0.3.0-beta.26",
+    "@accounts/graphql-api": "0.3.0-beta.26",
+    "@accounts/mongo": "0.3.0-beta.26",
+    "@accounts/password": "0.3.0-beta.26",
+    "@accounts/rest-express": "0.3.0-beta.26",
+    "@accounts/server": "0.3.0-beta.26",
+    "apollo-accounts-password-server": "0.3.0-beta.26",
+    "apollo-server": "^2.0.5",
+    "cors": "^2.8.4",
+    "express": "^4.16.3",
+    "graphql": "^0.13.2",
+    "graphql-tools": "^3.1.1",
+    "lodash": "^4.17.10",
+    "mongodb": "^3.1.3",
+    "mongoose": "^5.2.9"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
