--- a/demo/web/package.json
+++ b/demo/web/package.json
@@ -1,28 +1,27 @@
 {
   "name": "apollo-accounts-demo-client",
-  "version": "0.1.0",
   "private": true,
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build"
   },
   "dependencies": {
-    "@accounts/client": "^0.3.0-beta.20",
-    "@accounts/client-password": "^0.3.0-beta.20",
-    "@accounts/graphql-client": "0.3.0-beta.20",
-    "@accounts/rest-client": "0.3.0-beta.20",
+    "@accounts/client": "0.3.0-beta.26",
+    "@accounts/client-password": "0.3.0-beta.26",
+    "@accounts/graphql-client": "0.3.0-beta.26",
+    "@accounts/rest-client": "0.3.0-beta.26",
     "@material-ui/core": "1.2.3",
     "apollo-boost": "0.1.10",
-    "apollo-accounts-password-client": "^0.1.0",
-    "graphql": "0.13.2",
-    "qrcode.react": "0.8.0",
-    "react": "16.4.1",
-    "react-apollo": "2.1.6",
-    "react-dom": "16.4.1",
-    "react-router-dom": "4.3.1",
-    "react-scripts": "^1.1.4"
+    "apollo-accounts-password-client": "0.3.0-beta.26",
+    "graphql": "^0.13.2",
+    "qrcode.react": "^0.8.0",
+    "react": "^16.4.2",
+    "react-apollo": "^2.1.11",
+    "react-dom": "^16.4.2",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "^1.1.5"
   },
   "devDependencies": {
-    "jest": "23.1.0"
+    "jest": "^23.5.0"
   }
 }
